view/css/main.css
/* Data graph */
#chart_container {
  position: relative;
  font-family: Arial, Helvetica, sans-serif;
}

#chart {
  position: absolute;
  top: 0;
  left: 40px;
}

#y_axis {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 40px;
}

#legend_container {
  position: absolute;
  right: 0;
  bottom: 26px;
  width: 0;
}

.detail_swatch { float: right; display: inline-block; width: 10px; height: 10px; margin: 0 4px 0 0 }

#injections_chart {
    position: absolute;
    top: 0;
    left: 40px;
  }


/* Data pages */
.topLink{
  padding-top: 14px;
}
.slab {
  background-color: #ffffff;
  padding:20px;
  box-shadow: 2px 2px 6px #E5E5E4;
}
.graph{
  height: 500px;
}
.footer {
 width: 100%;
}

/* these are a couple of awful hacks! fix them. */
.mainDataPage {
  background-color: white !important;
}
.hackwhite, .hackwhite > a {
  background-color: white !important;
}

.hidden{
  display: none;
}

#overlay {
    padding-top: 10%;
    background-color: #fff;
    filter:alpha(opacity=80);
    -moz-opacity:0.80;
    -khtml-opacity: 0.80;
    opacity: 0.90;
    z-index: 20000;
    position: absolute;
    width: 100%;
    height: 100%;
}
/* blurring the text behind the overlay */
.blurryText{
  color: rgba(0, 0, 0, 0) !important;
  text-shadow: 0 0 1px #888 !important;
}

#instructions{
  list-style-type: none;
}


/* Styles for screens that are atleast 768px; */
@media only screen and (min-width: 768px) {
.insights {
  color:#52C0E6;
  font-weight:bold;
  font-size: 4em;}
.datepicker{
  padding-bottom: 20px;
  display: block;
  float: left;
}
  }

/* Styles for screens that are less than 768px; */
@media only screen and (max-width: 768px) {
.insights {
  color:#52C0E6;
  font-weight:bold;
  font-size: 2em;
  float: right;}
.datepicker{
  padding-bottom: 10px;
  display: block;
  float: left;
  font-size: 1.2em;
  }
}

#droplet{
  height: 40px;
  padding-top: 10px;
  -moz-box-sizing: none;
  -webkit-box-sizing: none;
  box-sizing: none; 
}

.dataPage{
  background-color: #f9f9f9;
}

.dataPage-topbar{
  background-color: #ffffff;
}

